@@ -18,6 +18,7 @@ Changes for 1.3.4
 -Credits look and performance has been improved
 -Fixed the vanilla bug: Peach can't escape the running shell surf
 -Loading screen now goes smoother (except Emscripten)
+-Level testing will quit on success completion of a level
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
